--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
   <head>
-    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oefening 01</title>
+    <title>Contact</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- JavaScript: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer>
-    </script>
-    <!-- eigen geschreven css voor jouw html-bestand -->
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+
+    <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
   </head>
 
-  <body class="p-3 m-0 border-0 bd-example">
+  <body class="m-0 border-0 bd-example">
     <nav class="navbar navbar-expand-md bg-body-tertiary">
       <div class="container-fluid">
-        <a class="" href=""><img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
+        <a class="navbar-brand" href="./index.html">
+          <img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContact"
+          aria-controls="navContact" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navContact">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html">portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="./index.html">home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./contact.html">contact</a></li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="me-2" type="search" placeholder="zoeken" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">zoeken</button>
           </form>
         </div>
@@ -49,119 +43,49 @@
     </nav>
 
     <header class="m-5 text-center blauwgrijs">
-      <h1 class="display-3">portfolio</h1>
+      <h1 class="display-3">CONTACT</h1>
     </header>
     <div class="container">
-      <div class="row row-cols-2 g-3">
-        <main class="col-md-9 col-sm-12 col-12">
-          <section id="shopintro" class="row">
-            <article class="col">
-              <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-              <p>Vul het registratieformulier in.<br>
-                velden met een <span>*</span> zijn verplicht.</p>
-            </article>
-            <hr>
-            <form action="#" method="POST" class="row row-cols-1 g-3 mb-3">
-              <fieldset class="row">
-                <legend class="text-uppercase fs-6 fw-bold col-12">Gegevens</legend>
-                <div class="col-md-6">
-                  <label for="voornaam">voornaam *</label>
-                  <input type="text" name="voornaam" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="achternaam">achternaam *</label>
-                  <input type="text" name="achternaam" class="form-control" required>
-                </div>
-                <div class="col-sm-6">
-                  <label for="mobiel">mobiel</label>
-                  <input type="tel" name="mobiel" class="form-control" placeholder="0412 34 56 78">
-                </div>
-                <div class="col-sm-6">
-                  <label for="geboortedatum">geboortedatum</label>
-                  <input type="date" name="geboortedatum" class="form-control" placeholder="dd/mm/jjjj">
-                </div>
-              </fieldset>
-              <fieldset class="row">
-                <legend class="text-uppercase fs-6 fw-bold col-12">Accountgegevens</legend>
-                <div class="col-md-12">
-                  <label for="email">e-mail *</label>
-                  <input type="email" name="email" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="password">paswoord *</label>
-                  <input type="password" name="password" class="form-control" placeholder="min 8 karakters, 1 cijfer, 1 hoofdletter" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="confirmPassword">bevestigt paswoord *</label>
-                  <input type="password" name="confirmPassword" class="form-control" required>
-                </div>
-              </fieldset>
-              <fieldset class="row">
-                <legend class="text-uppercase fs-6 fw-bold col-12">Adresgegevens</legend>
-                <div class="col-12">
-                  <label for="adres">adres *</label>
-                  <input type="text" name="adres" class="form-control" required>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                  <label for="postcode">postcode *</label>
-                  <input type="number" name="postcode" class="form-control" required>
-                </div>
-                <div class="col-md-5 col-sm-6">
-                  <label for="stad">stad *</label>
-                  <input type="text" name="stad" class="form-control" required>
-                </div>
-                <div class="col-md-4">
-                  <label for="land">kies een land *</label>
-                  <select name="land" class="form-select" required>
-                    <option value="België" selected>België</option>
-                    <option value="Duitsland">Duitsland</option>
-                    <option value="Frankrijk">Frankrijk</option>
-                    <option value="Luxemburg">Luxemburg</option>
-                    <option value="Nederland">Nederland</option>
-                    <option value="Verenigd Koninkrijk">Verenigd Koninkrijk</option>
-                  </select>
-                </div>
-              </fieldset>
-              <fieldset class="row">
-                <legend class="text-uppercase fs-6 fw-bold col-12">Huidige studie</legend>
-                <div class="col-md-6">
-                  <label for="studie">ik studeer</label>
-                  <select name="studie" class="form-select">
-                    <option value="snb">systeem-en netwerkbeheer</option>
-                    <option value="iot">internet of things</option>
-                  </select>
-                </div>
-                <div class="col-md-12">
-                  <label for="tevredenheid">Hoe tevreden ben je van ons?</label>
-                  <input type="range" name="tevredenheid" class="form-range" min="0" max="10" step="1">
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input type="checkbox" name="voorwaarden" id="voorwaarden" class="form-check-input" required>
-                    <label for="voorwaarden" class="form-check-label">algemene voorwaarden gelezen en goedgekeurd</label>
-                  </div>
-                </div>
-              </fieldset>
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Verzenden</button>
+      <div class="row g-3">
+        <main class="col-md-9 col-sm-12">
+          <section id="contact-form" class="row">
+            <div class="col-12 mb-3">
+              <a href="./index.html" class="text-decoration-none">
+                <i class="bi bi-arrow-left"></i> TERUG
+              </a>
+            </div>
+            <form action="#" method="POST" class="col-12 col-lg-10">
+              <div class="mb-3">
+                <label for="naam" class="form-label">NAAM</label>
+                <input type="text" id="naam" name="naam" class="form-control" required>
               </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">JE E-MAIL</label>
+                <input type="email" id="email" name="email" class="form-control" required>
+              </div>
+              <div class="mb-3">
+                <label for="bericht" class="form-label">BERICHT</label>
+                <textarea id="bericht" name="bericht" class="form-control" rows="5" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">VERSTUREN</button>
             </form>
           </section>
         </main>
+
         <aside class="col-md-3 p-5 border-start border-light-emphasis">
           <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-          <p>PORTFOLIO<br>
-            <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a><br>
-          </p>
-          <ul class="list-inline socials">
-            <li class="">
-              <a href="https://www.github.com" target="_blank">
-                <i class=""></i>
-              </a>
-            </li>
+          <p class="mb-1"><strong>E:</strong> jouw.mail@voorbeeld.com</p>
+          <p class="mb-3"><strong>T:</strong> +123 456 789</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
+          </ul>
         </aside>
       </div>
     </div>
-    <footer class="footer p-3 m-0 bg-body-tertiary text-center">&copy; portfolio</footer>
+
+    <footer class="footer m-0 bg-body-tertiary text-center">© portfolio</footer>
+
   </body>
 </html>
