--- a/index.html
+++ b/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
   <head>
-    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Portfolio</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- JavaScript: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer>
-    </script>
-    <!-- eigen geschreven css voor jouw html-bestand -->
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
   </head>
 
-  <body class="p-3 m-0 border-0 bd-example">
+  <body class="m-0 border-0 bd-example">
     <nav class="navbar navbar-expand-md bg-body-tertiary">
       <div class="container-fluid">
-        <a class="" href=""><img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
-        </a>
+        <a href="./index.html"><img src="assets/images/logo.png" alt="POWER web" width="100" height="100"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html">portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contact.html">contact</a></li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
+            <input class="me-2" type="search" placeholder="zoeken" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">zoeken</button>
           </form>
         </div>
@@ -52,37 +41,39 @@
       <h1 class="display-3">portfolio</h1>
     </header>
     <div class="container">
-      <div class="row row-cols-2">
-        <main class="col-md-9 col-sm-12 col-12">
-          <section class="row">
-            <article class="col">
-              <h2 class="text-uppercase fs-5 fw-bold">portfolio</h2>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quidem consequatur officiis labore
-                ex, expedita omnis architecto dolore ratione aliquid. Expedita libero est tempore esse distinctio?
-                Autem voluptas exercitationem eius quas harum magni obcaecati nemo cum voluptatum voluptatem maiores
-                quibusdam voluptates laudantium perspiciatis minima labore quod, id itaque iure nostrum.</p>
+      <div class="row g-4">
+        <main class="col-md-8 col-12">
+          <section id="intro" class="row align-items-center">
+            <article class="col-md-6 col-12 text-center">
+              <img src="assets/images/professioneleFoto.jpg" alt="Portfolio Hero" class="img-fluid rounded" style="max-width:100%; height:auto;">
             </article>
-            <hr>
+            <article class="col-md-6 col-12">
+              <h2 class="text-uppercase fs-5 fw-bold">Welkom</h2>
+              <p>Welkom op mijn portfolio. Hier vindt u een overzicht van mijn projecten, vaardigheden en professionele achtergrond in systeem- en netwerkbeheer.</p>
+              <a href="./portfolio.html" class="btn btn-primary mt-2">Bekijk mijn werk</a>
+            </article>
           </section>
-          <hr>
+          <section id="introductie" class="row mt-4">
+            <article class="col-12">
+              <h2 class="text-uppercase fs-5 fw-bold">Introductie</h2>
+              <p>Mijn naam is Wasim, ik specialiseer mij in systeem- en netwerkbeheer. In dit portfolio vindt u voorbeelden van mijn werk, documentatie van projecten, en een overzicht van mijn vaardigheden en opleidingen.</p>
+            </article>
+          </section>
         </main>
 
-        <aside class="col-md-3">
-          <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-          <p>PORTFOLIO<br>
-            <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a><br>
-          </p>
-          <ul class="list-inline socials">
-            <li class="">
-              <a href="https://www.github.com" target="_blank">
-                <i class=""></i>
-              </a>
+        <aside class="col-md-4 col-12 p-3 border-start border-3 border-primary">
+          <h2 class="fs-6 fw-bold text-uppercase">Contact</h2>
+          <p><a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
+          <ul class="list-inline socials mb-0">
+            <li class="list-inline-item">
+              <a href="https://www.github.com" target="_blank"><i class="bi bi-github"></i></a>
             </li>
           </ul>
         </aside>
-
       </div>
     </div>
-    <footer class="footer p-3 m-0 bg-body-tertiary text-center">&copy; portfolio</footer>
+
+    <footer class="footer m-0 bg-body-tertiary text-center">&copy; portfolio</footer>
+
   </body>
 </html>
