--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
   <head>
-    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Portfolio</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- JavaScript: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer>
-    </script>
-    <!-- eigen geschreven css voor jouw html-bestand -->
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
   </head>
 
-  <body class="p-3 m-0 border-0 bd-example">
+  <body class="m-0 border-0 bd-example">
     <nav class="navbar navbar-expand-md bg-body-tertiary">
       <div class="container-fluid">
-        <a class="" href=""><img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
+        <a class="navbar-brand" href="./index.html">
+          <img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navPortfolio"
+          aria-controls="navPortfolio" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navPortfolio">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="./index.html">home</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contact.html">contact</a></li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
@@ -49,40 +40,95 @@
     </nav>
 
     <header class="m-5 text-center blauwgrijs">
-      <h1 class="display-3">portfolio</h1>
+      <h1 class="display-3">PORTFOLIO</h1>
     </header>
     <div class="container">
-      <div class="row row-cols-2">
-        <main class="col-md-9 col-sm-12 col-12">
-          <section class="row">
+      <div class="row g-3">
+        <main class="col-md-9 col-sm-12">
+          <section id="projects" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <!-- Project 1 -->
             <article class="col">
-              <h2 class="text-uppercase fs-5 fw-bold">portfolio</h2>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quidem consequatur officiis labore
-                ex, expedita omnis architecto dolore ratione aliquid. Expedita libero est tempore esse distinctio?
-                Autem voluptas exercitationem eius quas harum magni obcaecati nemo cum voluptatum voluptatem maiores
-                quibusdam voluptates laudantium perspiciatis minima labore quod, id itaque iure nostrum.</p>
+              <div class="card h-100">
+                <img src="assets/images/project1.jpg" class="card-img-top" alt="Project 1">
+                <div class="card-body">
+                  <h5 class="card-title">Project 1</h5>
+                  <p class="card-text">Korte omschrijving van project 1, wat je hebt gedaan en welke vaardigheden gebruikt zijn.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
             </article>
-            <hr>
+            <!-- Project 2 -->
+            <article class="col">
+              <div class="card h-100">
+                <img src="assets/images/project2.jpg" class="card-img-top" alt="Project 2">
+                <div class="card-body">
+                  <h5 class="card-title">Project 2</h5>
+                  <p class="card-text">Korte omschrijving van project 2, inclusief gebruikte technologieën.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
+            </article>
+            <!-- Project 3 -->
+            <article class="col">
+              <div class="card h-100">
+                <img src="assets/images/project3.jpg" class="card-img-top" alt="Project 3">
+                <div class="card-body">
+                  <h5 class="card-title">Project 3</h5>
+                  <p class="card-text">Korte omschrijving van project 3, wat het doel was en resultaat.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
+            </article>
+            <!-- Project 4 -->
+            <article class="col">
+              <div class="card h-100">
+                <img src="assets/images/project4.jpg" class="card-img-top" alt="Project 4">
+                <div class="card-body">
+                  <h5 class="card-title">Project 4</h5>
+                  <p class="card-text">Korte omschrijving van project 4 met focus op leerervaringen.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
+            </article>
+            <!-- Project 5 -->
+            <article class="col">
+              <div class="card h-100">
+                <img src="assets/images/project5.jpg" class="card-img-top" alt="Project 5">
+                <div class="card-body">
+                  <h5 class="card-title">Project 5</h5>
+                  <p class="card-text">Korte omschrijving van project 5 en gebruikte tools.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
+            </article>
+            <!-- Project 6 -->
+            <article class="col">
+              <div class="card h-100">
+                <img src="assets/images/project6.jpg" class="card-img-top" alt="Project 6">
+                <div class="card-body">
+                  <h5 class="card-title">Project 6</h5>
+                  <p class="card-text">Korte omschrijving van project 6 met resultaten en impact.</p>
+                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                </div>
+              </div>
+            </article>
           </section>
-          <hr>
         </main>
 
-        <aside class="col-md-3">
+        <aside class="col-md-3 p-5 border-start border-light-emphasis">
           <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-          <p>PORTFOLIO<br>
-            <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a><br>
-          </p>
-          <ul class="list-inline socials">
-            <li class="">
-              <a href="https://www.github.com" target="_blank">
-                <i class=""></i>
-              </a>
-            </li>
+          <p class="mb-1"><strong>E:</strong> jouw.mail@voorbeeld.com</p>
+          <p class="mb-3"><strong>T:</strong> +123 456 789</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
           </ul>
         </aside>
-
       </div>
     </div>
-    <footer class="footer p-3 m-0 bg-body-tertiary text-center">&copy; portfolio</footer>
+
+    <footer class="footer m-0 bg-body-tertiary text-center">© portfolio</footer>
+
   </body>
 </html>
