--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="CSS/reset.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -64,6 +65,7 @@
         <aside class="col-md-4 col-12 p-3 border-start border-3 border-primary">
           <h2 class="fs-6 fw-bold text-uppercase">Contact</h2>
           <p><a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
+          <p><a href="tel:+32484843579">+32 484 84 35 79</a></p>
           <ul class="list-inline socials mb-0">
             <li class="list-inline-item">
               <a href="https://www.github.com" target="_blank"><i class="bi bi-github"></i></a>
